--- a/css/10.css
+++ b/css/10.css
@@ -79,25 +79,33 @@ table th {
 .year{
 	background-color: #000;
 }
-#flex-course{
+#flex-background{
 	display: flex;
 	flex-wrap: wrap;
 }
-.course-items{
+.background-items{
 	text-align: center;
 	flex:33%;
 }
-.course-img{
+.background-img{
 	width: 90%;
 }
-.course-titel{
+.background-titel{
 	font-size: 100%;
 	font-weight: bold;
 	padding: 10px 10px 5px 10px;
 	margin: 0px;
 }
-.course-text{
+.background-text{
 	margin: 0px 10px 20px 10px;
+}
+
+.background-img-square{
+	width: 50%;
+}
+.background-img-fh{
+	width:90%;
+	padding-bottom: 5px;
 }
 
 
@@ -111,7 +119,7 @@ table th {
 	.flex-container{
 		flex-wrap: wrap;
 	}
-	.course-items{
+	.background-items{
 		flex:50%;
 	}
 }
@@ -125,7 +133,7 @@ table th {
 	.flex-container{
 		flex-wrap: wrap;
 	}
-	.course-items{
+	.background-items{
 		flex: 100%;
 	}
 /*	*{
